--- a/index.html
+++ b/index.html
@@ -6,6 +6,50 @@
     <title>Teckwave</title>
     <!-- Link CSS -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Link Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <div class="container nav-content">
+          <a class="logo" href="#">Tech<span>Wave</span></a>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Episodes</a></li>
+            <li><a href="#">Host</a></li>
+          </ul>
+          <button class="btn">
+            Subscribe <i class="fa-solid fa-arrow-right-long"></i>
+          </button>
+        </div>
+      </nav>
+      <section id="banner">
+        <div class="banner-content">
+          <div class="banner-img">
+            <img src="./assets/microphone.png" alt="" />
+          </div>
+          <h1>TechWave</h1>
+          <p>
+            Your daily dose of tech insights, productivity hacks, and personal
+            growth
+          </p>
+          <div class="banner-btns">
+            <button class="btn">
+              <img src="./assets/spotify.png" alt="spotify" /> Listen on spotify
+            </button>
+            <button class="btn btn-subscribe">
+              <img src="./assets/message.png" alt="" /> Subscribe
+            </button>
+          </div>
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
