Add episodes, meet and footer section

--- a/index.html
+++ b/index.html
@@ -51,5 +51,223 @@
         </div>
       </section>
     </header>
+    <main>
+      <section id="about">
+        <div class="container about-content">
+          <h2 class="section_title">About the Podcast</h2>
+          <p class="section_description">
+            TechWave is your go-to podcast for staying ahead in the fast-paced
+            world of technology. <br />
+            We break down complex topics into digestible insights, explore
+            productivity strategies that actually work, <br />
+            and share stories of personal growth from industry leaders.
+          </p>
+          <p class="section_description">
+            Join thousands of young professionals and tech enthusiasts who start
+            their day with TechWave.
+          </p>
+          <hr class="hr" />
+          <div class="about-cards">
+            <div class="about-card">
+              <h3>150K+</h3>
+              <p>Monthly Listeners</p>
+            </div>
+            <div class="about-card">
+              <h3>200+</h3>
+              <p>Episodes Published</p>
+            </div>
+            <div class="about-card">
+              <h3>4.9★</h3>
+              <p>Average Rating</p>
+            </div>
+            <div class="about-card">
+              <h3>50+</h3>
+              <p>Industry Experts</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="choose">
+        <div class="container choose-content">
+          <h2 class="section_title">Why Choose TechWave</h2>
+          <div class="showcase">
+            <div class="show-box big-row">
+              <img src="./assets/headphone.png" alt="Headphone" />
+              <h3>Premium Audio Quality</h3>
+              <p>
+                Experience crystal-clear sound with professional-grade recording
+                equipment and expert audio engineering. Every episode is
+                mastered for optimal listening across all devices and platforms.
+              </p>
+            </div>
+            <div class="show-box big-col">
+              <img src="./assets/device.png" alt="Device" />
+              <h3>Mobile Friendly</h3>
+              <p>
+                Listen on the go with seamless mobile experience and offline
+                downloads.
+              </p>
+            </div>
+            <div class="show-box big-col">
+              <img src="./assets/location.png" alt="Location" />
+              <h3>Global Community</h3>
+              <p>
+                Connect with tech enthusiasts from over 120 countries worldwide.
+              </p>
+            </div>
+            <div class="show-box big-col">
+              <img src="./assets/zap.png" alt="Zap" />
+              <h3>Exclusive Interviews</h3>
+              <p>
+                Get unprecedented access to industry titans, startup founders,
+                and tech visionaries. Our host secures exclusive conversations
+                you won't find anywhere else, diving deep into their journeys,
+                failures, and success strategies.
+              </p>
+            </div>
+            <div class="show-box">
+              <img src="./assets/resource.png" alt="Book" />
+              <h3>Rich Resources</h3>
+              <p>
+                Access show notes, transcripts, and additional learning
+                materials for every episode.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="feature">
+        <div class="container feature-content">
+          <h2 class="section_title">Featured Episodes</h2>
+          <div class="episodes">
+            <div class="episode">
+              <iframe
+                src="https://www.youtube.com/embed/H5zSQ9M_s2Y?si=SQC0zQGp9nbePyXP"
+                frameborder="0"
+                allow="autoplay; encrypted-media"
+                allowfullscreen
+              >
+              </iframe>
+              <div class="episode_details">
+                <h3>The Future of AI in Everyday Life</h3>
+                <p>
+                  Exploring how artificial intelligence is transforming our
+                  daily routines and what to expect in the next decade.
+                </p>
+                <p class="time">
+                  <img src="./assets/clock.png" alt="clock" />30 min
+                </p>
+              </div>
+            </div>
+            <div class="episode">
+              <iframe
+                src="https://www.youtube.com/embed/YcQYQaHJhLs?si=OkpdCWCKyBPuCZYB"
+                frameborder="0"
+                allow="autoplay; encrypted-media"
+                allowfullscreen
+              >
+              </iframe>
+              <div class="episode_details">
+                <h3>Building Better Habits for Remote Work</h3>
+                <p>
+                  Practical strategies for staying productive and maintaining
+                  work-life balance in a remote environment.
+                </p>
+                <p class="time">
+                  <img src="./assets/clock.png" alt="clock" />35 min
+                </p>
+              </div>
+            </div>
+            <div class="episode">
+              <iframe
+                src="https://www.youtube.com/embed/hBuk7X9Jkg8?si=cKmc1SXf1qp6tkWX"
+                frameborder="0"
+                allow="autoplay; encrypted-media"
+                allowfullscreen
+              >
+              </iframe>
+              <div class="episode_details">
+                <h3>Career Growth in Tech: A Roadmap</h3>
+                <p>
+                  Expert advice on navigating your tech career from junior
+                  developer to senior leadership roles.
+                </p>
+                <p class="time">
+                  <img src="./assets/clock.png" alt="clock" />42 min
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="contact">
+        <div class="container">
+          <h2 class="section_title">Meet the Host</h2>
+          <div class="contact-content">
+            <div class="contant-img">
+              <img src="./assets/host.png" alt="Host" />
+            </div>
+            <div class="contant-info">
+              <h3>Alex Kumar</h3>
+              <p>
+                Tech entrepreneur, productivity expert, and lifelong learner.
+                Alex has been in the tech industry for over 10 years, working
+                with startups and Fortune 500 companies. Through TechWave, Alex
+                shares insights from industry leaders and practical advice for
+                anyone looking to grow in tech.
+              </p>
+              <div class="contact-social">
+                <div class="contact-icon">
+                  <img src="./assets/linkedin.png" alt="linkedin" />
+                </div>
+                <div class="contact-icon">
+                  <img src="./assets/x.png" alt="x" />
+                </div>
+                <div class="contact-icon">
+                  <img src="./assets/instagram.png" alt="instagram" />
+                </div>
+                <div class="contact-icon">
+                  <img src="./assets/youtube.png" alt="youtube" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container footer-content">
+        <a class="logo" href="#">Tech<span>Wave</span></a>
+        <ul>
+          <li>
+            <a href="#"
+              ><img src="./assets/spotify.png" alt="spotify" />Spotify</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./assets/apple-podcast.png" alt="apple-podcast" />Apple
+              Podcast</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="./assets/youtube-podcast.png"
+                alt="youtube"
+              />Youtube</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img src="./assets/twitter.png" alt="twitter" />Twitter</a
+            >
+          </li>
+        </ul>
+        <p class="copyright">
+          &copy; 2026 TechWave Podcast. All rights reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
