Add interactivity and responsiveness

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Teckwave</title>
     <!-- Link CSS -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- Link Responsive CSS -->
+    <link rel="stylesheet" href="./css/responsive.css" />
     <!-- Link Font Awesome -->
     <link
       rel="stylesheet"
@@ -28,10 +30,11 @@
           <button class="btn">
             Subscribe <i class="fa-solid fa-arrow-right-long"></i>
           </button>
+          <img class="menu-bar" src="./assets/hamburger-menu.png" alt="Menu" />
         </div>
       </nav>
       <section id="banner">
-        <div class="banner-content">
+        <div class="container banner-content">
           <div class="banner-img">
             <img src="./assets/microphone.png" alt="" />
           </div>
